deployments/kubernetes/deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: go-job-dispatcher
---
apiVersion: v1
kind: Service
metadata:
  name: go-job-dispatcher-service # Name of the Kubernetes service
  namespace: go-job-dispatcher # Name of the Kubernetes namespace
  labels:
    app: go-job-dispatcher
spec:
  type: NodePort
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: go-job-dispatcher # link to the deployment
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: go-job-dispatcher-ingress
  namespace: go-job-dispatcher # Name of the Kubernetes namespace
  labels:
    app: go-job-dispatcher
spec:
  tls:
    - hosts:
        - job-dispatcher.url.com # todo: change
      secretName: go-tls
  rules:
    - host: job-dispatcher.url.com # todo: change
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: go-job-dispatcher-service
                port:
                  number: 8080
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: go-job-dispatcher-redis
  namespace: go-job-dispatcher
spec:
  serviceName: "redis"
  selector:
    matchLabels:
      app: go-job-dispatcher-redis
  updateStrategy:
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        app: go-job-dispatcher-redis
    spec:
      containers:
        - name: redis
          image: redis
          resources:
            limits:
              memory: 10Gi # TODO: change according to your needs
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-data
              mountPath: /usr/share/redis
  volumeClaimTemplates:  # this will be used to create PVC
    - metadata:
        name: redis-data
        namespace: go-job-dispatcher
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
        storageClassName: local-storage
        selector:
          matchLabels:
            redis-node-type: data
